error de ortografía

--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
             </button>
             <div class="collapse navbar-collapse" id="mainNav">
                 <div class="navbar-nav ms-auto align-items-center">
-                    <a class="nav-link text-white" href="quienes-somos.html">Quiénes somos</a>
+                    <a class="nav-link text-white" href="quienes-somos.html">Quienes somos</a>
                     <a class="nav-link text-white" href="foro.html">Foro</a>
                     
                     <a class="nav-link text-white d-flex align-items-center" href="perfil.html" id="perfilLinkNav" style="display: none;">
