--- a/html/foro.html
+++ b/html/foro.html
@@ -22,13 +22,13 @@
                 <div class="navbar-nav ms-auto align-items-center">
                     <a class="nav-link text-white" href="index.html">Inicio</a>
                     
-                    <a class="nav-link text-white d-flex align-items-center" href="perfil.html" id="perfilLink" style="display: none;">
+                    <a class="nav-link text-white d-flex align-items-center requires-auth" href="perfil.html" id="perfilLink">
                         <img src="https://via.placeholder.com/30" id="navUserAvatar" class="rounded-circle" style="width: 30px; height: 30px; object-fit: cover; margin-right: 5px;">
                         <span id="navUserName">Perfil</span>
                     </a>
 
                     <a class="nav-link text-white" href="admin.html" id="adminLink" style="display: none;">Admin</a>
-                    <button id="authButton" class="btn btn-primary" onclick="handleAuth()">Iniciar sesión</button>
+                    <button id="authButton" class="btn btn-primary requires-no-auth" onclick="handleAuth()">Iniciar sesión</button>
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
     <main class="container-fluid py-4">
         <div class="row gx-4">
             <div class="col-lg-8">
-                <div id="createPostSection" class="card shadow-sm border-0 mb-4" style="display: none;">
+                <div id="createPostSection" class="card shadow-sm border-0 mb-4 requires-auth">
                     <div class="card-body p-4">
                         <h2 class="h4 card-title mb-3">Crear Nueva Publicación</h2>
                         <div id="error-message-post" class="alert alert-danger" style="display: none;"></div>
