--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
             </button>
             <div class="collapse navbar-collapse" id="mainNav">
                 <div class="navbar-nav ms-auto align-items-center">
-                    <a class="nav-link text-white" href="quienes-somos.html">Quiénes somos</a>
+                    <a class="nav-link text-white" href="quienes-somos.html">Quienes somos</a>
                     <a class="nav-link text-white" href="foro.html">Foro</a>
                     
                     <a class="nav-link text-white d-flex align-items-center requires-auth" href="perfil.html" id="perfilLinkNav">
@@ -124,7 +124,7 @@
             <p class="mb-0">&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
             <div class="d-flex gap-3">
                 <a href="contacto.html" class="text-white">Contacto</a>
-                <a href="quienes-somos.html" class="text-white">Quiénes somos</a>
+                <a href="quienes-somos.html" class="text-white">Quienes somos</a>
             </div>
         </div>
     </footer>
