--- a/html/quienes-somos.html
+++ b/html/quienes-somos.html
@@ -53,7 +53,7 @@
                         </div>
                         <div class="col-md-4 col-lg-3">
                             <div class="card h-100 text-center shadow-sm">
-                                <img src="https://via.placeholder.com/120" class="card-img-top rounded-circle mx-auto mt-3" alt="Cristóbal Aravena" style="width: 120px; height: 120px;">
+                                <img src="/imagenes/Cristobal.png" class="card-img-top rounded-circle mx-auto mt-3" alt="Cristóbal Aravena" style="width: 120px; height: 120px;">
                                 <div class="card-body">
                                     <h3 class="h5 card-title text-primary">Cristóbal Aravena</h3>
                                     <p class="card-text text-muted mb-2">Desarrollador Backend</p>
@@ -73,11 +73,11 @@
                         </div>
                         <div class="col-md-4 col-lg-3">
                             <div class="card h-100 text-center shadow-sm">
-                                <img src="https://via.placeholder.com/120" class="card-img-top rounded-circle mx-auto mt-3" alt="Diego Reyes" style="width: 120px; height: 120px;">
+                                <img src="" class="card-img-top rounded-circle mx-auto mt-3" alt="Jesus Villa" style="width: 120px; height: 120px;">
                                 <div class="card-body">
-                                    <h3 class="h5 card-title text-primary">Diego Reyes</h3>
+                                    <h3 class="h5 card-title text-primary">Jesus Villa</h3>
                                     <p class="card-text text-muted mb-2">Desarrollador Backend</p>
-                                    <p class="small">Encargado de la base de datos.</p>
+                                    <p class="small">Encargado de la base de datos y arquitectura interna.</p>
                                 </div>
                             </div>
                         </div>
