--- a/html/foro.html
+++ b/html/foro.html
@@ -10,25 +10,27 @@
 <body class="d-flex flex-column">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark-custom shadow-sm">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="../imagenes/logo.png" alt="Mente Libre" class="logo-lg">
-                <h1 class="h3 ms-2 mb-0 text-white">Mente Libre</h1>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="mainNav">
-                <input class="form-control me-auto ms-lg-4 my-2 my-lg-0" type="search" id="searchInput" placeholder="🔍 Buscar posts..." style="max-width: 400px;">
-                <div class="navbar-nav ms-auto align-items-center">
-                    <a class="nav-link text-white" href="index.html">Inicio</a>
-                    
-                    <a class="nav-link text-white d-flex align-items-center requires-auth" href="perfil.html" id="perfilLink">
-                        <img src="https://via.placeholder.com/30" id="navUserAvatar" class="rounded-circle" style="width: 30px; height: 30px; object-fit: cover; margin-right: 5px;">
-                        <span id="navUserName">Perfil</span>
-                    </a>
+            <div class="navbar-nav ms-auto align-items-center">
+    <a class="nav-link text-white" href="index.html">Inicio</a>
 
-                    <a class="nav-link text-white" href="admin.html" id="adminLink" style="display: none;">Admin</a>
-                    <button id="authButton" class="btn btn-primary requires-no-auth" onclick="handleAuth()">Iniciar sesión</button>
+    <div class="nav-item dropdown me-2">
+    <button id="notificationsButton" class="btn btn-outline-light position-relative" data-bs-toggle="dropdown" aria-expanded="false">
+        🔔 <span id="notifCount" class="badge bg-danger position-absolute top-0 start-100 translate-middle" style="display:none">0</span>
+    </button>
+    <ul class="dropdown-menu dropdown-menu-end p-2" id="notificationsMenu" style="min-width: 320px;">
+        <li class="text-center text-muted small">Cargando notificaciones...</li>
+    </ul>
+</div>
+
+    <a class="nav-link text-white d-flex align-items-center requires-auth" href="perfil.html" id="perfilLink">
+        <img src="https://via.placeholder.com/30" id="navUserAvatar" class="rounded-circle" style="width: 30px; height: 30px; object-fit: cover; margin-right: 5px;">
+        <span id="navUserName">Perfil</span>
+    </a>
+
+    <a class="nav-link text-white" href="admin.html" id="adminLink" style="display: none;">Admin</a>
+    <button id="authButton" class="btn btn-primary requires-no-auth" onclick="handleAuth()">Iniciar sesión</button>
+</div>
+
                 </div>
             </div>
         </div>
@@ -83,6 +85,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
+                    <div id="postDetailContent"></div>
                     <div id="comentarios-list"></div>
                 </div>
                 <div class="modal-footer" id="form-comentario" style="display: none;">
@@ -152,5 +155,8 @@
     <script src="../js/comentarios.js"></script>
     <script src="../js/reportes.js"></script>
     <script src="../js/foro.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1.6.1/dist/sockjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
+    <script src="../js/notifications.js"></script>
 </body>
 </html>
