--- a/html/contacto.html
+++ b/html/contacto.html
@@ -11,7 +11,7 @@
     <header class="navbar navbar-dark bg-dark-custom shadow-sm">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="../imagenes/logo.png" alt="Mente Libre" class="logo-lg">
+                <img src="../imagenes/logo-removebg-preview.png" alt="Mente Libre" class="logo-lg">
                 <span class="h3 ms-2 mb-0 text-white">Mente Libre</span>
             </a>
         </div>
