--- a/html/index.html
+++ b/html/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-  <title>Bienvenido a Mente Libre</title>
-  <link rel="stylesheet" href="/css/style.css">
-    </head>
-    <body>
-    <div class="box1">
-        <div>
-            <nav>
-                <a href="/html/index.html">
-                    <img src="/imagenes/logo.png" alt="Mente Libre" class="logo">
-                </a>
-                <ul>
-                    <li><button>Quiénes somos</button></li>
-                    <li><button><a href="/html/foro.html">Foro</a></button></li>
-                    <li><button>Registrarse</button></li>
-                    <li><input type="text" placeholder="Buscar"><button>Buscar</button> </li>
-                </ul>
-            </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bienvenido a Mente Libre</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/styles.css">
+</head>
+<body>
+    <nav>
+        <div class="logoNav">
+            <a href="index.html">
+                <img src="../imagenes/logo.png" alt="Mente Libre" class="logo">
+            </a>
+            <h1>Mente Libre</h1>
         </div>
         <div style="display: flex; gap: 15px; align-items: center; flex-wrap: wrap;">
              <a href="quienes-somos.html">Quiénes somos</a>
@@ -87,38 +82,12 @@
             </div>
         </section>
     </div>
-    <div class="box4">
-        <h3>¿Qué encontrarás en nuestro foro?</h3>
-        <div class="imgs">
-            <div class="foro-apoyo">
-                <img src="/imagenes/foro.png" alt="foro-apoyo" class="img-foro">
-                <button><a>Foro de apoyo emocional</a></button>
-            </div>
-            <div class="chat">
-                <img src="/imagenes/chat.png" alt="chat-especialistas" class="chat-apoyo">
-                <button><p>Chat con especialistas</p></button>
-            </div>
-            <div class="contactos">
-                <img src="/imagenes/contacto-emergencia.png" alt="contactos-emergencia" class="contactos-emergencia">
-                <button><p>Contactos de emergencia</p></button>
-            </div>
-        </div>
-    </div>
-    <div class="box5">
-        <h1>Tu participación es clave </h1>
-        <p>Ya sea que necesites ayuda, quieras ofrecerla o desees unirte a nuestra comunidad, aquí hay un lugar para ti.  Juntos, podemos construir un espacio de esperanza y sanación.</p>
-        <div class="btns-box5">
-            <a href="/html/foro.html"><button class="foro1">Unirse al foro</button></a>
-            <button class="contacto1">Contactarse con un especialista</button>
-            <button class="apoyo1">Aprende a apoyar a otros</button>
-        </div>
-    </div>
+
     <footer>
         <p>&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
         <div class="footer-links">
-        <a href="/politicas-privacidad.html">Políticas de privacidad</a>
-        <a href="/html/contacto.html">Contacto</a>
-        <a href="/html/quienes-somos.html">Quienes somos</a>
+            <a href="contacto.html">Contacto</a>
+            <a href="quienes-somos.html">Quiénes somos</a>
         </div>
     </footer>
 
