corregido el css luego del ultimo parche erróneo

--- a/html/perfil.html
+++ b/html/perfil.html
@@ -22,7 +22,7 @@
         }
     </style>
 </head>
-<body class="bg-light d-flex flex-column">
+<body>
     <header class="navbar navbar-dark bg-dark-custom shadow-sm">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
