--- a/html/admin.html
+++ b/html/admin.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body class="bg-light">
+<body>
     <header class="navbar navbar-dark bg-dark-custom shadow-sm">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
@@ -18,7 +18,7 @@
         </div>
     </header>
 
-    <div class="container my-4">
+    <main class="container my-4">
         <nav>
             <div class="nav nav-tabs" id="adminTab" role="tablist">
                 <button class="nav-link active" id="nav-stats-tab" data-bs-toggle="tab" data-bs-target="#nav-stats" type="button" role="tab">📊 Estadísticas</button>
@@ -103,7 +103,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 
     <div class="modal fade" id="modal-resolve-report" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
@@ -132,6 +132,13 @@
             </div>
         </div>
     </div>
+
+    <footer class="bg-dark-custom text-white p-4 mt-auto">
+      <div class="container d-flex justify-content-between align-items-center flex-wrap">
+          <p class="mb-0">&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
+          <a href="contacto.html" class="text-white">Contacto</a>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/auth.js"></script>
