--- a/html/contacto.html
+++ b/html/contacto.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body class="bg-light d-flex flex-column">
+<body>
     <header class="navbar navbar-dark bg-dark-custom shadow-sm">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
