--- a/html/crearpost.html
+++ b/html/crearpost.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>MenteLibre · Crear Post</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="./css/styles.css" rel="stylesheet">
+<link href="../css/styles.css" rel="stylesheet">
 </head>
 <body>
 <main class="container py-5">
@@ -36,8 +36,15 @@
     </div>
   </div>
 </main>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<script src="/js/createPost.js"></script>
+<footer class="bg-dark-custom text-white p-4 mt-auto">
+  <div class="container d-flex justify-content-between align-items-center flex-wrap">
+      <p class="mb-0">&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
+      <a href="contacto.html" class="text-white">Contacto</a>
+  </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../js/createPost.js"></script>
 </body>
 </html>
