--- a/html/foro.html
+++ b/html/foro.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body class="d-flex flex-column">
+<body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark-custom shadow-sm">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="index.html">
@@ -44,10 +44,9 @@
   </div>
 </nav>
 
-
-    <main class="container-fluid py-4">
+    <main class="container py-4">
         <div class="row gx-4">
-            <div class="col-lg-8">
+            <div class="col-lg-9">
                 <div id="createPostSection" class="card shadow-sm border-0 mb-4 requires-auth">
                     <div class="card-body p-4">
                         <h2 class="h4 card-title mb-3">Crear Nueva Publicación</h2>
@@ -74,12 +73,14 @@
                 </div>
             </div>
 
-            <aside class="col-lg-4">
-                <div class="card shadow-sm border-0">
-                    <div class="card-body">
-                        <h2 class="h4 card-title text-center text-primary">Usuarios Destacados</h2>
-                        <ul id="topUsersList" class="list-group list-group-flush">
-                        </ul>
+            <aside class="col-lg-3">
+                <div class="sticky-top" style="top: 1.5rem;">
+                    <div class="card shadow-sm border-0">
+                        <div class="card-body">
+                            <h2 class="h4 card-title text-center text-primary">Usuarios Destacados</h2>
+                            <ul id="topUsersList" class="list-group list-group-flush">
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </aside>
@@ -158,6 +159,13 @@
             </div>
         </div>
     </div>
+
+    <footer class="bg-dark-custom text-white p-4 mt-auto">
+      <div class="container d-flex justify-content-between align-items-center flex-wrap">
+          <p class="mb-0">&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
+          <a href="contacto.html" class="text-white">Contacto</a>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/auth.js"></script>
