--- a/html/login.html
+++ b/html/login.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body class="bg-light d-flex flex-column">
+<body>
     <header class="navbar navbar-dark bg-dark-custom shadow-sm">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
@@ -49,6 +49,13 @@
         </div>
     </main>
     
+    <footer class="bg-dark-custom text-white p-4 mt-auto">
+      <div class="container d-flex justify-content-between align-items-center flex-wrap">
+          <p class="mb-0">&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
+          <a href="contacto.html" class="text-white">Contacto</a>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/auth.js"></script>
 </body>
