--- a/html/mispost.html
+++ b/html/mispost.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body class="d-flex flex-column">
+<body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark-custom shadow-sm">
     <div class="container">
@@ -67,6 +67,13 @@
         </div>
     </div>
     </div>
+
+  <footer class="bg-dark-custom text-white p-4 mt-auto">
+    <div class="container d-flex justify-content-between align-items-center flex-wrap">
+        <p class="mb-0">&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
+        <a href="contacto.html" class="text-white">Contacto</a>
+    </div>
+  </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../js/auth.js"></script>
