--- a/html/politica-privacidad.html
+++ b/html/politica-privacidad.html
@@ -3,38 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mente Libre - politicas de privacidad</title>
-    <link rel="stylesheet" href="/css/perfil_usuario.css">
+    <title>Mente Libre - Políticas de Privacidad</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
-    <header>
-        <img src="/imagenes/logo.png">
-        <h1>Mente Libre</h1>
+    <header class="navbar navbar-dark bg-dark-custom shadow-sm">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <img src="../imagenes/logo-removebg-preview.png" alt="Mente Libre" class="logo-lg">
+                <span class="h3 ms-2 mb-0 text-white">Mente Libre</span>
+            </a>
+        </div>
     </header>
 
-<section class="perfil">
-    <img src="https://via.placeholder.com/150" alt="Foto de usuario">
-    <h2>Yerko León</h2>
-    <p>Correo: yerko@example.com</p>
-    <p>Estado actual: <strong>Tranquilo</strong></p>
+<main class="container my-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
+            <div class="card shadow-sm border-0">
+                <div class="card-body p-4 p-lg-5">
+                    <h1 class="text-primary text-center">Políticas de Privacidad</h1>
+                    <p class="lead text-muted text-center">Tu privacidad es importante para nosotros.</p>
+                    
+                    <hr class="my-4">
 
-    <div class="estadisticas">
-        <div>
-            <h3>12</h3>
-            <span>Sesiones</span>
-        </div>
-        <div>
-            <h3>7.8 / 10</h3>
-            <span>Ánimo promedio</span>
+                    <h2>1. Información que recopilamos</h2>
+                    <p>Recopilamos información que nos proporcionas directamente al registrarte, como tu nombre, apellido, correo electrónico y nombre de usuario. También recopilamos el contenido que generas en el foro (posts y comentarios).</p>
+
+                    <h2>2. Uso de la información</h2>
+                    <p>Utilizamos tu información para:</p>
+                    <ul>
+                        <li>Proveer, operar y mantener nuestros servicios.</li>
+                        <li>Mejorar, personalizar y expandir nuestros servicios.</li>
+                        <li>Entender y analizar cómo utilizas nuestros servicios.</li>
+                        <li>Comunicarnos contigo, ya sea directamente o a través de uno de nuestros socios, incluido el servicio de atención al cliente, para proporcionarte actualizaciones y otra información relacionada con el servicio.</li>
+                        <li>Prevenir el fraude y moderar el contenido.</li>
+                    </ul>
+
+                    <h2>3. Cómo compartimos tu información</h2>
+                    <p>No compartimos tu información personal con terceros, excepto en las siguientes circunstancias:</p>
+                    <ul>
+                        <li>Con tu consentimiento.</li>
+                        <li>Para cumplir con las leyes.</li>
+                        <li>Para responder a solicitudes legales.</li>
+                        <li>Para proteger nuestros derechos y propiedad.</li>
+                    </ul>
+                    <p>Tu nombre de usuario y el contenido que publicas (posts, comentarios) son visibles públicamente en el foro.</p>
+
+                    <h2>4. Seguridad de tus datos</h2>
+                    <p>Tomamos medidas de seguridad para proteger tu información personal. Sin embargo, ningún sistema es 100% seguro, y no podemos garantizar la seguridad absoluta de tu información.</p>
+
+                    <div class="text-center mt-5">
+                        <a href="index.html">← Volver al inicio</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+</main>
 
-    <div class="botones">
-        <button class="editar">Editar Perfil</button>
-        <button class="cerrar">Cerrar Sesión</button>
-    </div>
-</section>
+<footer class="bg-dark-custom text-white p-4 mt-auto">
+  <div class="container d-flex justify-content-between align-items-center flex-wrap">
+      <p class="mb-0">&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
+      <a href="contacto.html" class="text-white">Contacto</a>
+  </div>
+</footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
