--- a/html/post.html
+++ b/html/post.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body class="d-flex flex-column min-vh-100 bg-light">
+<body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark-custom shadow-sm">
     <div class="container-fluid">
