--- a/html/index.html
+++ b/html/index.html
@@ -117,12 +117,12 @@
     </section>
   </main>
 
-  <footer class="bg-dark-custom text-white p-4 mt-5">
+  <footer class="bg-dark-custom text-blue p-4 mt-5">
     <div class="container d-flex justify-content-between align-items-center flex-wrap">
       <p class="mb-0">&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
       <div class="d-flex gap-3">
-        <a href="contacto.html" class="text-white">Contacto</a>
-        <a href="quienes-somos.html" class="text-white">Quienes somos</a>
+        <a href="contacto.html" class="text-blue">Contacto</a>
+        <a href="quienes-somos.html" class="text-blue">Quienes somos</a>
       </div>
     </div>
   </footer>
