--- a/html/post.html
+++ b/html/post.html
@@ -12,7 +12,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark-custom shadow-sm">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="foro.html">
-        <img src="../imagenes/logo.png" alt="Mente Libre" class="logo-lg">
+        <img src="../imagenes/logo-removebg-preview.png" alt="Mente Libre" class="logo-lg">
         <h1 class="h4 ms-2 mb-0 text-white">Mente Libre</h1>
       </a>
     </div>
