--- a/html/quienes-somos.html
+++ b/html/quienes-somos.html
@@ -43,7 +43,7 @@
                         </div>
                         <div class="col-md-4 col-lg-3">
                             <div class="card h-100 text-center shadow-sm">
-                                <img src="https://via.placeholder.com/120" class="card-img-top rounded-circle mx-auto mt-3" alt="Yamilet Ulloa" style="width: 120px; height: 120px;">
+                                <img src="/imagenes/yamilet.jpg" class="card-img-top rounded-circle mx-auto mt-3" alt="Yamilet Ulloa" style="width: 120px; height: 120px;">
                                 <div class="card-body">
                                     <h3 class="h5 card-title text-primary">Yamilet Ulloa</h3>
                                     <p class="card-text text-muted mb-2">Desarrollador Frontend</p>
@@ -73,7 +73,7 @@
                         </div>
                         <div class="col-md-4 col-lg-3">
                             <div class="card h-100 text-center shadow-sm">
-                                <img src="" class="card-img-top rounded-circle mx-auto mt-3" alt="Jesus Villa" style="width: 120px; height: 120px;">
+                                <img src="/imagenes/Jesus.jpeg" class="card-img-top rounded-circle mx-auto mt-3" alt="Jesus Villa" style="width: 120px; height: 120px;">
                                 <div class="card-body">
                                     <h3 class="h5 card-title text-primary">Jesus Villa</h3>
                                     <p class="card-text text-muted mb-2">Desarrollador Backend</p>
