--- a/html/quienes-somos.html
+++ b/html/quienes-somos.html
@@ -63,7 +63,7 @@
                         </div>
                         <div class="col-md-4 col-lg-3">
                             <div class="card h-100 text-center shadow-sm">
-                                <img src="https://via.placeholder.com/120" class="card-img-top rounded-circle mx-auto mt-3" alt="Francisco Navarrete" style="width: 120px; height: 120px;">
+                                <img src="/imagenes/francisco.png" class="card-img-top rounded-circle mx-auto mt-3" alt="Francisco Navarrete" style="width: 120px; height: 120px;">
                                 <div class="card-body">
                                     <h3 class="h5 card-title text-primary">Francisco Navarrete</h3>
                                     <p class="card-text text-muted mb-2">Desarrollador Backend</p>
