--- a/html/quienes-somos.html
+++ b/html/quienes-somos.html
@@ -33,7 +33,7 @@
                     <div class="row g-4 justify-content-center">
                         <div class="col-md-4 col-lg-3">
                             <div class="card h-100 text-center shadow-sm">
-                                <img src="/imagenes/" class="card-img-top rounded-circle mx-auto mt-3" alt="Yerko León" style="width: 120px; height: 120px;">
+                                <img src="/imagenes/YerkoLeon.jpg" class="card-img-top rounded-circle mx-auto mt-3" alt="Yerko León" style="width: 120px; height: 120px;">
                                 <div class="card-body">
                                     <h3 class="h5 card-title text-primary">Yerko León</h3>
                                     <p class="card-text text-muted mb-2">Desarrollador Frontend</p>
