error de ortografía

--- a/html/quienes-somos.html
+++ b/html/quienes-somos.html
@@ -21,7 +21,7 @@
         <div class="card shadow-sm border-0">
             <div class="card-body p-4 p-lg-5">
                 <section class="text-center mb-5">
-                    <h1 class="text-primary">Quiénes Somos</h1>
+                    <h1 class="text-primary">Quienes Somos</h1>
                     <p class="lead text-muted col-lg-8 mx-auto">
                         En <strong>Mente Libre</strong> creemos que la salud mental debe ser accesible, cercana y humana.
                         Somos un equipo de jóvenes comprometidos con el bienestar emocional, que busca ofrecer apoyo psicológico y herramientas digitales innovadoras para mejorar la calidad de vida de las personas.
