--- a/html/quienes-somos.html
+++ b/html/quienes-somos.html
@@ -21,7 +21,7 @@
         <div class="card shadow-sm border-0">
             <div class="card-body p-4 p-lg-5">
                 <section class="text-center mb-5">
-                    <h1 class="text-primary">Quiénes Somos</h1>
+                    <h1 class="text-primary">Quienes Somos</h1>
                     <p class="lead text-muted col-lg-8 mx-auto">
                         En <strong>Mente Libre</strong> creemos que la salud mental debe ser accesible, cercana y humana.
                         Somos un equipo de jóvenes comprometidos con el bienestar emocional, que busca ofrecer apoyo psicológico y herramientas digitales innovadoras para mejorar la calidad de vida de las personas.
@@ -43,7 +43,7 @@
                         </div>
                         <div class="col-md-4 col-lg-3">
                             <div class="card h-100 text-center shadow-sm">
-                                <img src="https://via.placeholder.com/120" class="card-img-top rounded-circle mx-auto mt-3" alt="Yamilet Ulloa" style="width: 120px; height: 120px;">
+                                <img src="/imagenes/yamilet.jpg" class="card-img-top rounded-circle mx-auto mt-3" alt="Yamilet Ulloa" style="width: 120px; height: 120px;">
                                 <div class="card-body">
                                     <h3 class="h5 card-title text-primary">Yamilet Ulloa</h3>
                                     <p class="card-text text-muted mb-2">Desarrollador Frontend</p>
@@ -63,7 +63,7 @@
                         </div>
                         <div class="col-md-4 col-lg-3">
                             <div class="card h-100 text-center shadow-sm">
-                                <img src="https://via.placeholder.com/120" class="card-img-top rounded-circle mx-auto mt-3" alt="Francisco Navarrete" style="width: 120px; height: 120px;">
+                                <img src="/imagenes/francisco.png" class="card-img-top rounded-circle mx-auto mt-3" alt="Francisco Navarrete" style="width: 120px; height: 120px;">
                                 <div class="card-body">
                                     <h3 class="h5 card-title text-primary">Francisco Navarrete</h3>
                                     <p class="card-text text-muted mb-2">Desarrollador Backend</p>
@@ -73,7 +73,7 @@
                         </div>
                         <div class="col-md-4 col-lg-3">
                             <div class="card h-100 text-center shadow-sm">
-                                <img src="" class="card-img-top rounded-circle mx-auto mt-3" alt="Jesus Villa" style="width: 120px; height: 120px;">
+                                <img src="/imagenes/Jesus.jpeg" class="card-img-top rounded-circle mx-auto mt-3" alt="Jesus Villa" style="width: 120px; height: 120px;">
                                 <div class="card-body">
                                     <h3 class="h5 card-title text-primary">Jesus Villa</h3>
                                     <p class="card-text text-muted mb-2">Desarrollador Backend</p>
