re implementación de la barra de búsqueda

--- a/html/foro.html
+++ b/html/foro.html
@@ -15,6 +15,10 @@
       <span class="h3 ms-2 mb-0 text-white">Mente Libre</span>
     </a>
 
+    <form class="d-flex mx-lg-4 flex-grow-1" id="searchForm" role="search">
+      <input class="form-control" type="search" id="searchInput" placeholder="Buscar posts o usuarios..." aria-label="Buscar">
+    </form>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
