--- a/html/perfil.html
+++ b/html/perfil.html
@@ -56,6 +56,7 @@
 
                         <div class="d-flex gap-2 justify-content-center">
                             <button class="btn btn-primary" onclick="abrirModalEditarPerfil()">Editar Perfil</button>
+                            <button class="btn btn-info" onclick="window.location.href='mispost.html'">Mis Posts</button>
                             <button class="btn btn-secondary" onclick="cerrarSesion()">Cerrar Sesión</button>
                         </div>
                     </div>
