--- a/html/perfil.html
+++ b/html/perfil.html
@@ -152,8 +152,10 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/utils.js"></script>
   <script src="../js/auth.js"></script>
   <script src="../js/moods.js"></script>
   <script src="../js/perfil.js"></script>
+
 </body>
 </html>
