--- a/html/registro.html
+++ b/html/registro.html
@@ -28,7 +28,7 @@
                         <div id="error-message" class="alert alert-danger" style="display: none;"></div>
                         <div id="success-message" class="alert alert-success" style="display: none;"></div>
 
-                        <form id="registerForm" class="row g-3" onsubmit="return handleRegistro(event)">
+                        <form id="registerForm" class="row g-3">
                             <div class="col-md-6">
                                 <label for="nombre" class="form-label">Nombre</label>
                                 <input type="text" id="nombre" name="nombre" class="form-control" placeholder="Ingresa tu nombre" required>
