--- a/html/admin.html
+++ b/html/admin.html
@@ -84,18 +84,21 @@
                     </div>
                 </div>
             </div>
+
             <div class="tab-pane fade" id="nav-posts" role="tabpanel">
                 <div class="p-3">
                     <h2>Posts Pendientes de Moderación</h2>
                     <div id="pending-posts-list" class="mt-3"></div>
                 </div>
             </div>
+
             <div class="tab-pane fade" id="nav-users" role="tabpanel">
                 <div class="p-3">
                     <h2>Gestión de Usuarios</h2>
                     <div id="users-list" class="mt-3"></div>
                 </div>
             </div>
+
             <div class="tab-pane fade" id="nav-reports" role="tabpanel">
                 <div class="p-3">
                     <h2>Reportes Pendientes</h2>
@@ -141,6 +144,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/utils.js"></script>
     <script src="../js/auth.js"></script>
     <script src="../js/admin.js"></script>
 </body>
